General info component styling.

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,3 +5,4 @@ $ff-text: 'Lato', sans-serif;;
 $ff-title: 'Montserrat', sans-serif;
 $clr-bg-dk: #023e8a;
 $clr-bg-blck: #2b2d42;
+$clr-prim: #3f37c9;
