--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,10 @@
   
   main {
     @include flexCenter;
+    padding: 2rem;
+    align-items: flex-start;
+    width: 50%;
+    border: 1px solid red;
     height: 100%;
   }
 }
