Extracted buttons to seperate components.

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,3 +6,7 @@ $ff-title: 'Montserrat', sans-serif;
 $clr-bg-dk: #023e8a;
 $clr-bg-blck: #2b2d42;
 $clr-prim: #3f37c9;
+
+$clr-accept: #90be6d;
+$clr-decline: #f94144;
+$clr-edit: #f8961e;
