--- a/src/App.scss
+++ b/src/App.scss
@@ -6,14 +6,14 @@
 
 .App {
   @include flexCenter(column);
-  height: 100%;
   
   main {
     @include flexCenter(column);
+    margin: .5rem 0;
     padding: 2rem;
     width: 50%;
     justify-content: flex-start;
-    border: 1px solid red;
+    border: 2px solid $clr-bg-blck;
     height: 100%;
   }
 }
